language/move-lang/tests/move_check/typing/mutate_field_internal.exp
error: 

    ┌── tests/move_check/typing/mutate_field_internal.move:13:9 ───
    │
 13 │         X::s().f = 0;
    │         ^^^^^^^^ Invalid access of field 'f' on '0x1::X::S'. Fields can only be accessed inside the struct's module
    │

error: 

    ┌── tests/move_check/typing/mutate_field_internal.move:15:9 ───
    │
 15 │         s.f = 0;
    │         ^^^ Invalid access of field 'f' on '0x1::X::S'. Fields can only be accessed inside the struct's module
    │

